Remove all calls to Unsafe and use VarHandles everywhere.